--- a/package.json
+++ b/package.json
@@ -32,12 +32,9 @@
     "dotenv": "^16.3.2",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
-    "joi": "^17.12.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "zod": "^3.22.4"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
