--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.3.2",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
+    "mathjs": "^13.0.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "reflect-metadata": "^0.1.13"
