--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.3.1",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.3.2",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
